<resources>
    <string name="app_name">Ecommerce App - Web Service</string>
    <string name="title_search">search</string>
    <string name="title_login">Login</string>
    <string name="title_setting">Setting</string>
    <string name="title_cart">Cart - Post Request</string>
    <string name="title_category">Category - Put Request</string>
    <string name="title_home">Home</string>
    <string name="txt_open">Open</string>
    <string name="txt_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_product_1">men jeans || men jeans pants || Denim Jeans || jeans for men
Disclaimer : Kindly Refer To The Size Chart (Also Mentioned In Images) For Fitting Measurements.1</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txt_btn_add_product">Add Product</string>
    <string name="txt_description">Description</string>
    <string name="txt_price">Price</string>
    <string name="txt_product_name">Product name</string>
</resources>