<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/menu_category"
            android:icon="@drawable/ic_menu_category"
            android:title="@string/title_category" />
        <item
            android:id="@+id/menu_cart"
            android:icon="@drawable/ic_menu_cart"
            android:title="@string/title_cart" />
        <item
            android:id="@+id/menu_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/title_setting" />
        <item
            android:id="@+id/menu_login"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/title_login" />
    </group>
</menu>